--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <input type="text" id="input-string" #input class="input_string"/>
     <button (click)="validateString(input.value)" class="validate_button">Validate String</button>
   </div>
-  <div class="result_container">
+  <pre>
     {{result}}
-  </div>
+  </pre>
 </div>
